--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
     <head>
         <meta charset="utf-8">
         <title></title>
+        <link href="styles/player.css" rel="stylesheet">
         <link href="styles/stage.css" rel="stylesheet">
-        <script src="scripts/stage.js"></script>
-
-
         <link href="styles/app.css" rel="stylesheet">
+
+
+        <script src="scripts/declare.js"></script>
+        <script src="scripts/player.js"></script>
+        <script src="scripts/stage.js"></script>
         <script src="scripts/app.js"></script>
     </head>
     <body></body>
