--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
         <link href="styles/app.css" rel="stylesheet">
 
 
-        <script src="scripts/declare.js"></script>
+        <script src="scripts/boot.js"></script>
         <script src="scripts/player.js"></script>
         <script src="scripts/stage.js"></script>
+        
         <script src="scripts/app.js"></script>
     </head>
     <body></body>
