--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
         <script src="scripts/boot.js"></script>
         <script src="scripts/player.js"></script>
         <script src="scripts/stage.js"></script>
-        
+        <script src="scripts/joystick.js"></script>
+
         <script src="scripts/app.js"></script>
     </head>
     <body></body>
