--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
         <title></title>
         <link href="styles/player.css" rel="stylesheet">
         <link href="styles/stage.css" rel="stylesheet">
+        <link href="styles/blueprints/weapons/Bullet.css" rel="stylesheet">
+
         <link href="styles/app.css" rel="stylesheet">
 
 
@@ -12,6 +14,9 @@
         <script src="scripts/player.js"></script>
         <script src="scripts/stage.js"></script>
         <script src="scripts/joystick.js"></script>
+        <script src="scripts/blueprints/weapons/Weapon.js"></script>
+        <script src="scripts/blueprints/weapons/Bullet.js"></script>
+        <script src="scripts/blueprints/weapons/Gun.js"></script>
 
         <script src="scripts/app.js"></script>
     </head>
