--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
         <link href="styles/player.css" rel="stylesheet">
         <link href="styles/stage.css" rel="stylesheet">
         <link href="styles/blueprints/weapons/Bullet.css" rel="stylesheet">
+        <link href="styles/blueprints/weapons/ExCalibur.css" rel="stylesheet">
+        <link href="styles/blueprints/weapons/RedBane.css" rel="stylesheet">
 
         <link href="styles/app.css" rel="stylesheet">
 
@@ -17,6 +19,8 @@
         <script src="scripts/blueprints/weapons/Weapon.js"></script>
         <script src="scripts/blueprints/weapons/Bullet.js"></script>
         <script src="scripts/blueprints/weapons/Gun.js"></script>
+        <script src="scripts/blueprints/weapons/ExCalibur.js"></script>
+        <script src="scripts/blueprints/weapons/RedBane.js"></script>
 
         <script src="scripts/app.js"></script>
     </head>
