Add favicon,  enemy ai, and enemy character.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <link href="styles/blueprints/weapons/Bullet.css" rel="stylesheet">
         <link href="styles/blueprints/weapons/ExCalibur.css" rel="stylesheet">
         <link href="styles/blueprints/weapons/RedBane.css" rel="stylesheet">
+        <link href="styles/blueprints/bot.css" rel="stylesheet">
 
         <link href="styles/app.css" rel="stylesheet">
 
@@ -16,12 +17,14 @@
         <script src="scripts/player.js"></script>
         <script src="scripts/stage.js"></script>
         <script src="scripts/joystick.js"></script>
+        <script src="scripts/blueprints/Bot.js"></script>
+        <script src="scripts/blueprints/ais/RaidAi.js"></script>
         <script src="scripts/blueprints/weapons/Weapon.js"></script>
         <script src="scripts/blueprints/weapons/Bullet.js"></script>
         <script src="scripts/blueprints/weapons/Gun.js"></script>
         <script src="scripts/blueprints/weapons/ExCalibur.js"></script>
         <script src="scripts/blueprints/weapons/RedBane.js"></script>
-
+        
         <script src="scripts/app.js"></script>
     </head>
     <body></body>
